<resources>
    <string name="app_name">m4_component</string>
    <string name="profile_photo">profile photo</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="gender">Пол</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="receive_notifications">Получать уведомления</string>
    <string name="about_authorization">Об авторизации на устройстве</string>
    <string name="about_new_products">О новинках и предложениях</string>
    <string name="points">Баллы</string>
    <string name="_00_100">00/100</string>
    <string name="_100">%1$d/100</string>
    <string name="save">Сохранить</string>
    <string name="saved">Изменения сохранены</string>
</resources>